tests/rosetta/out/C/cartesian-product-of-two-or-more-lists-4.error
cc: exit status 1
/tmp/cartesian-product-of-two-or-more-lists-4.c: In function ‘llStr’:
/tmp/cartesian-product-of-two-or-more-lists-4.c:103:11: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  103 |     s = s + listStr(lst.data[i]);
      |           ^ ~~~~~~~~~~~~~~~~~~~~
      |             |
      |             char *
/tmp/cartesian-product-of-two-or-more-lists-4.c: In function ‘cartN’:
/tmp/cartesian-product-of-two-or-more-lists-4.c:131:12: error: incompatible types when returning type ‘list_int’ but ‘list_list_int’ was expected
  131 |     return tmp10;
      |            ^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:133:3: error: conversion to non-scalar type requested
  133 |   list_list_int a = (list_list_int)(lists);
      |   ^~~~~~~~~~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:142:35: error: incompatible type for argument 1 of ‘slice_list_int’
  142 |   list_int tmp13 = slice_list_int(a, 0, last);
      |                                   ^
      |                                   |
      |                                   list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:65:41: note: expected ‘list_int’ but argument is of type ‘list_list_int’
   65 | static list_int slice_list_int(list_int v, int start, int end) {
      |                                ~~~~~~~~~^
/tmp/cartesian-product-of-two-or-more-lists-4.c:143:30: error: incompatible type for argument 1 of ‘cartN’
  143 |   list_list_int left = cartN(tmp13);
      |                              ^~~~~
      |                              |
      |                              list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c: In function ‘mochi_main’:
/tmp/cartesian-product-of-two-or-more-lists-4.c:172:30: error: incompatible type for argument 1 of ‘cartN’
  172 |   printf("%s\n", llStr(cartN(tmp20)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:181:30: error: incompatible type for argument 1 of ‘cartN’
  181 |   printf("%s\n", llStr(cartN(tmp23)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:188:30: error: incompatible type for argument 1 of ‘cartN’
  188 |   printf("%s\n", llStr(cartN(tmp26)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:195:30: error: incompatible type for argument 1 of ‘cartN’
  195 |   printf("%s\n", llStr(cartN(tmp29)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:213:37: error: incompatible type for argument 1 of ‘cartN’
  213 |   for (int tmp37 = 0; tmp37 < cartN(tmp32).len; tmp37++) {
      |                                     ^~~~~
      |                                     |
      |                                     list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:214:24: error: incompatible type for argument 1 of ‘cartN’
  214 |     list_int p = cartN(tmp32).data[tmp37];
      |                        ^~~~~
      |                        |
      |                        list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:215:24: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  215 |     printf("%s\n", " " + listStr(p));
      |                    ~~~ ^ ~~~~~~~~~~
      |                    |     |
      |                    |     char *
      |                    char *
/tmp/cartesian-product-of-two-or-more-lists-4.c:229:30: error: incompatible type for argument 1 of ‘cartN’
  229 |   printf("%s\n", llStr(cartN(tmp38)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:240:30: error: incompatible type for argument 1 of ‘cartN’
  240 |   printf("%s\n", llStr(cartN(tmp42)));
      |                              ^~~~~
      |                              |
      |                              list_list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
/tmp/cartesian-product-of-two-or-more-lists-4.c:244:30: error: incompatible type for argument 1 of ‘cartN’
  244 |   printf("%s\n", llStr(cartN(tmp46)));
      |                              ^~~~~
      |                              |
      |                              list_int
/tmp/cartesian-product-of-two-or-more-lists-4.c:128:25: note: expected ‘int’ but argument is of type ‘list_int’
  128 | list_list_int cartN(int lists) {
      |                     ~~~~^~~~~
